# porter-stemmer

./: Cargo.toml  README.md  aliases.js  search-index.js  source-files.js
benches/: basic.rs
examples/: simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
porter_stemmer/: all.html  fn.stem.html  fn.stem_tokenized.html  index.html  sidebar-items.js  stem.v.html  stem_tokenized.v.html
src/: lib.rs
src/porter_stemmer/: lib.rs.html
src/porter_stemmer/src/: lib.rs.html
src/unicode_segmentation/: grapheme.rs.html  lib.rs.html  sentence.rs.html  tables.rs.html  word.rs.html
unicode_segmentation/: USentenceBoundIndices.t.html  UnicodeSentences.t.html  all.html  constant.UNICODE_VERSION.html  enum.GraphemeIncomplete.html  index.html  struct.GraphemeCursor.html  struct.GraphemeIndices.html  struct.Graphemes.html  struct.USentenceBoundIndices.html  struct.USentenceBounds.html  struct.UWordBoundIndices.html  struct.UWordBounds.html  struct.UnicodeSentences.html  struct.UnicodeWords.html  trait.UnicodeSegmentation.html
unicode_segmentation/sentence/: USentenceBounds.t.html
unicode_segmentation/tables/: sidebar-items.js
